--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 </head>
 
 <body>
-    <nav class="navbar">           <!-- Add hrefs -->
-        <ul>
-            <li><a href="">Justin C. Thomas</a></li>
-            <li><a href="">Experience</a></li>
-            <li><a href="">Education</a></li>
-            <li><a href="">Projects</a></li>
-        </ul>
+    <nav class="navbar">
+            <a href="">Justin C. Thomas</a>          
+            <a href="">Experience</a>
+            <a href="">Education</a>
+            <a href="">Projects</a>
     </nav>
 </body>
 </html>
