about section added

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 
 <body>
-    <nav class="navbar">
-            <a href="">Justin C. Thomas</a>          
-            <a href="">Experience</a>
-            <a href="">Education</a>
-            <a href="">Projects</a>
+    <nav class="navbar-grid">
+      <a href="">Justin C. Thomas</a>          
+      <a href="">Experience</a>
+      <a href="">Education</a>
+      <a href="">Projects</a>
     </nav>
+    <div class="about-grid">
+        <h1 class="hello-text">Hello!</h1>
+        <p class="about-text">I'm Justin, a Software Engineer with interests in web development and the natural sciences.</p>
+        <img class="profile-img" src="./imgs/profile-img.JPG" alt="Profile Img" width="500" height="500">
+    </div>
 </body>
 </html>
