convert to flexbox

--- a/index.html
+++ b/index.html
@@ -9,16 +9,24 @@
 </head>
 
 <body>
-    <nav class="navbar-grid">
-      <a href="">Justin C. Thomas</a>          
-      <a href="">Experience</a>
-      <a href="">Education</a>
-      <a href="">Projects</a>
+    <nav class="navbar-box">
+      <div class="home-link-item">
+        <a href="">Justin C. Thomas</a> 
+      </div> 
+      <div class="nav-link-items">
+        <a href="">Experience</a>
+        <a href="">Education</a>
+        <a href="">Projects</a>
+      </div>        
     </nav>
-    <div class="about-grid">
-        <h1 class="hello-text">Hello!</h1>
-        <p class="about-text">I'm Justin, a Software Engineer with interests in web development and the natural sciences.</p>
-        <img class="profile-img" src="./imgs/profile-img.JPG" alt="Profile Img" width="500" height="500">
+
+    <div class="about-box">
+        <div class="about-text-box">
+          <h1 class="hello-text-item">Hello!</h1>
+          <p class="about-text-item">I'm Justin, a Software Engineer with interests in web development and the natural sciences.</p>
+        </div>
+        <img class="profile-img-item" src="./imgs/profile-img.JPG" alt="Profile Img" width="500" height="500">
+        <!-- Add email, LinkedIn icons -->
     </div>
 </body>
 </html>
