nav-bar flex margin

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <div class="home-link-item">
         <a href="">Justin C. Thomas</a> 
       </div> 
-      <div class="nav-link-items">
-        <a href="">Experience</a>
-        <a href="">Education</a>
-        <a href="">Projects</a>
+      <div class="nav-link-box">
+        <a href="" class="nav-link-item">Experience</a>
+        <a href="" class="nav-link-item">Education</a>
+        <a href="" class="nav-link-item">Projects</a>
       </div>        
     </nav>
 
