--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
 
+<!-- Changes to ids and classes -->
+
 <body>
     <nav class="navbar-box">
       <div class="home-link-item">
@@ -25,8 +27,14 @@
           <h1 class="hello-text-item">Hello!</h1>
           <p class="about-text-item">I'm Justin, a Software Engineer with interests in web development and the natural sciences.</p>
         </div>
-        <img class="profile-img-item" src="./imgs/profile-img.JPG" alt="Profile Img" width="500" height="500">
+        <img class="profile-img-item" src="./imgs/profile-img.JPG" alt="Profile Img" >
         <!-- Add email, LinkedIn icons -->
+    </div>
+
+    <h1 id="experience-header">Experience</h1> 
+    <div class="experience-box">                <!-- hover over to find title, location, dates of employment -->
+      <img id="nordstrom-logo" src="./imgs/nordstrom-logo.jpg" alt="Nordstrom Logo">
+      <img id="imanage-logo" src="./imgs/imanage-logo.jpg" alt="iManage Logo">
     </div>
 </body>
 </html>
