academics section added

--- a/index.html
+++ b/index.html
@@ -16,25 +16,54 @@
         <a href="">Justin C. Thomas</a> 
       </div> 
       <div class="nav-link-box">
-        <a href="" class="nav-link-item">Experience</a>
-        <a href="" class="nav-link-item">Education</a>
+        <a href="" class="nav-link-item">Industry</a>
+        <a href="" class="nav-link-item">Academics</a>
         <a href="" class="nav-link-item">Projects</a>
       </div>        
     </nav>
 
     <div class="about-box">
-        <div class="about-text-box">
-          <h1 class="hello-text-item">Hello!</h1>
-          <p class="about-text-item">I'm Justin, a Software Engineer with interests in web development and the natural sciences.</p>
-        </div>
-        <img class="profile-img-item" src="./imgs/profile-img.JPG" alt="Profile Img" >
-        <!-- Add email, LinkedIn icons -->
+      <div class="about-text-box">
+        <h1 class="hello-text-item">Hello!</h1>
+        <p class="about-text-item">I'm Justin, a Software Engineer with interests in web development and the natural sciences.</p>
+      </div>
+      <img class="profile-img-item" src="./imgs/profile-img.JPG" alt="Profile Img" >
+      <!-- Add email, LinkedIn icons -->
     </div>
 
-    <h1 id="experience-header">Experience</h1> 
-    <div class="experience-box">                <!-- hover over to find title, location, dates of employment -->
-      <img id="nordstrom-logo" src="./imgs/nordstrom-logo.jpg" alt="Nordstrom Logo">
-      <img id="imanage-logo" src="./imgs/imanage-logo.jpg" alt="iManage Logo">
+    <h1 id="industry-header">Industry</h1> 
+    <div class="industry-box">
+      <div class="logo-box">                <!-- hover over to find title, location, dates of employment -->
+        <img id="nordstrom-logo" src="./imgs/nordstrom-logo.jpg" alt="Nordstrom Logo">
+        <img id="imanage-logo" src="./imgs/imanage-logo.jpg" alt="iManage Logo">
+      </div>
+    </div>
+
+    <!--                                      SLIDE BOX
+                          Nordstrom Logo                           iManage Logo
+                 <-                                                                               ->        
+                          Software Engineer                     Software Engineer in Test Intern
+                          Dec 2020 - Current                      June 2019 - Nov 2019
+    -->
+
+    <h1 id="academics-header">Academics</h1>
+    <div class="academics-box">
+      <div class="education-box">
+        <img id="uic-logo" src="./imgs/uic-logo-short.png">
+        <div class="education-text-box">
+          <h3>University of Illinois at Chicago (UIC)</h3>
+          <p>Cum Laude Honors - 3.53 GPA</p>
+          <p>BS Biology</p>
+          <p>BS Computer Science</p>
+        </div>
+      </div>
+      <div class="tutoring-box">
+        <h3 id="tutoring-experience-header">Tutoring Experience</h3>
+        <p>Cadaver Lab Assistant - UIC</p>
+        <p>Lead Writing Tutor - UIC</p>
+        <p>Computer Science Tutor - UIC</p>
+        <p>Mathematics - Varsity Tutors</p>
+      </div>
     </div>
 </body>
 </html>
