separate into different pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="">Justin C. Thomas</a> 
       </div> 
       <div class="nav-link-box">
-        <a href="" class="nav-link-item">Industry</a>
+        <a href="./Industry/industry.html" class="nav-link-item">Industry</a>
         <a href="" class="nav-link-item">Academics</a>
         <a href="" class="nav-link-item">Projects</a>
       </div>        
@@ -27,29 +27,14 @@
         <h1 class="hello-text-item">Hello!</h1>
         <p class="about-text-item">I'm Justin, a Software Engineer with interests in web development and the natural sciences.</p>
       </div>
-      <img class="profile-img-item" src="./imgs/profile-img.JPG" alt="Profile Img" >
+      <img class="profile-img-item" src="./Images/profile-img.JPG" alt="Profile Img" >
       <!-- Add email, LinkedIn icons -->
     </div>
-
-    <h1 id="industry-header">Industry</h1> 
-    <div class="industry-box">
-      <div class="logo-box">                <!-- hover over to find title, location, dates of employment -->
-        <img id="nordstrom-logo" src="./imgs/nordstrom-logo.jpg" alt="Nordstrom Logo">
-        <img id="imanage-logo" src="./imgs/imanage-logo.jpg" alt="iManage Logo">
-      </div>
-    </div>
-
-    <!--                                      SLIDE BOX
-                          Nordstrom Logo                           iManage Logo
-                 <-                                                                               ->        
-                          Software Engineer                     Software Engineer in Test Intern
-                          Dec 2020 - Current                      June 2019 - Nov 2019
-    -->
 
     <h1 id="academics-header">Academics</h1>
     <div class="academics-box">
       <div class="education-box">
-        <img id="uic-logo" src="./imgs/uic-logo-short.png">
+        <img id="uic-logo" src="./Images/uic-logo-short.png">
         <div class="education-text-box">
           <h3>University of Illinois at Chicago (UIC)</h3>
           <p>Cum Laude Honors - 3.53 GPA</p>
