--- a/Industry/industry.html
+++ b/Industry/industry.html
@@ -14,9 +14,9 @@
           <a href="../index.html">Justin C. Thomas</a> 
         </div> 
         <div class="nav-link-box">
+          <a href="" class="nav-link-item">Projects</a>
           <a href="" class="nav-link-item">Industry</a>
           <a href="" class="nav-link-item">Academics</a>
-          <a href="" class="nav-link-item">Projects</a>
         </div>        
     </nav>
     <div class="industry-box">
@@ -25,15 +25,20 @@
         <div class="experience-text-box">
             <h3 class="jobtitle-text">Software Engineer</h3>
             <span class="it-text">Seattle, WA : Dec 2020 - Present</span>
-            <!-- LOGOS HERE: React, Redux, HTML, CSS -->
+            <div class="tech-logo-box">
+              <img class="tech-logo" src="../Images/react-logo.jpg" alt="React Logo">
+              <img class="tech-logo" src="../Images/redux-logo.png" alt="Redux Logo">
+              <img class="tech-logo" src="../Images/html-logo.png" alt="HTML Logo">
+              <img class="tech-logo" src="../Images/css-logo.png" alt="CSS Logo">
+            </div>
         </div>
       </div>
       <div class="experience-box">
         <img id="imanage-logo" src="../Images/imanage-logo.jpg" alt="iManage Logo"> 
         <div class="experience-text-box">
             <h3 class="jobtitle-text imanage-jobtitle-text">Software Engineer in Test Intern</h3>
-            <span class="it-text">Chicago, IL : Jun 2019 - Nov 2019</span>
-            <!-- LOGOS HERE: Python -->
+            <span class="it-text">Chicago, IL : Jun 2019 - Nov 2019</span>  
+            <img class="tech-logo" src="../Images/python-logo.png" alt="Python Logo">
         </div>
       </div>
     </div>
