ported over academics

--- a/Industry/industry.html
+++ b/Industry/industry.html
@@ -14,9 +14,9 @@
           <a href="../index.html">Justin C. Thomas</a> 
         </div> 
         <div class="nav-link-box">
-          <a href="" class="nav-link-item">Projects</a>
-          <a href="" class="nav-link-item">Industry</a>
-          <a href="" class="nav-link-item">Academics</a>
+          <a href="../Projects/projects.html" class="nav-link-item">Projects</a>
+          <a href="../Industry/industry.html" class="nav-link-item">Industry</a>
+          <a href="../Academics/academics.html" class="nav-link-item">Academics</a>
         </div>        
     </nav>
     <div class="industry-box">
